# golf-tournaments

./: .gitignore  pyproject.toml
.github/workflows/: scrape_bgv.yml  scrape_clubs.yml  scrape_dgv.yml  scrape_pccaddie.yml
db/migrations/: 001_initial_schema.sql
scripts/: geocode_clubs.py  run_bgv_tournaments.py  run_club_scraper.py  run_dedup.py  run_dgv_tournaments.py  run_pccaddie.py  seed_clubs.py
src/: config.py  database.py
src/models/: __init__.py  club.py  scrape_log.py  tournament.py
src/normalization/: deduplication.py  geocoder.py  tournament_normalizer.py
src/parsers/: llm_extractor.py  pdf_parser.py
src/scrapers/: base.py  bgv_clubs.py  bgv_tournaments.py  club_website.py  dgv_tournaments.py  pccaddie.py
src/scrapers/clubs/: registry.py
tests/: test_models.py  test_normalization.py
web/: app.js  package-lock.json  package.json
web-old/: app.js  index.html  style.css
web/app/: globals.css  layout.tsx  page.tsx
web/app/clubs/: client.tsx  page.tsx
web/app/karte/: client.tsx  page.tsx
web/app/turniere/: client.tsx  page.tsx
web/app/turniere/[id]/: client.tsx  page.tsx
web/components/: calendar-card.tsx  club-map-mini.tsx  map-view.tsx  nav.tsx  tournament-card.tsx  tournament-filters.tsx  tournament-list.tsx  week-calendar.tsx
web/lib/: constants.ts  tournament-utils.ts  types.ts  utils.ts
