[project]
name = "golf-tournament-aggregator"
version = "0.1.0"
description = "Aggregates golf tournament data across Bavaria"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.45",
    "geopy>=2.4",
    "supabase>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
